# ExCthulhu

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: hourly-test.yml  lint.yml
ci/: send_telegram.py
configs_examples/: config.json  config.yaml  proxy_list.txt
cthulhu_src/: main.py
cthulhu_src/actions/: available_io.py  config.py  cycles.py  exchanges.py  find_txn.py  forecast.py  forecast_arbitrage.py  forecast_backtest.py  predict_advanced.py  predict_txn.py  prepare_data.py
cthulhu_src/routes/: __init__.py  available_io.py  config.py  cycles.py  exchanges.py  find_txn.py  forecast.py  forecast_backtest.py  historical_data.py  predict_advanced_txn.py  predict_txn.py
cthulhu_src/services/: __init__.py  arbitrage.py  cross_exchange_manager.py  exchange_manager.py  exchanger_service.py  forecast.py  forecast_arbitrage.py  historical_data.py  pair.py  predict.py  processor.py  progress_exchange_manager.py  proxy_manager.py
cthulhu_src/services/exchangers/: base_exchanger.py  binance.py  yobit.py
cthulhu_src/services/exchanges/: __init__.py  base_exchange.py  batching_exchange.py  binance.py  dsx.py  exmo.py  generic_exchange.py  hollaex.py  oceanex.py  poloniex.py  tidex.py  upbit.py  yobit.py
cthulhu_src/utils/: logger.py
cthulhu_src/web/: __init__.py  app.py
cthulhu_src/web/routes/: __init__.py  api.py  pages.py  progress.py
exctulhuvenv/: pyvenv.cfg
experiments/: simple_all_cycles.py
tests/: conftest.py  test_cross_exchange_manager.py  test_forecast_service.py  test_predict.py  test_processor.py
(+8 files in other folders)
