[tool.poetry]
name = "excthulhu"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
ccxt = "^1.27.20"
tabulate = "^0.8.7"
coloredlogs = "^14.0"
tqdm = "^4.46.0"
pyyaml = "^5.3.1"
aiohttp_proxy = "^0.1.2"
aiohttp = "^3.6.2"
numpy = "^2.3"
scikit-learn = "^1.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
